Agregar clase de borde redondeado a los tarjetas en la página de inicio

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,7 +21,9 @@
         size-lg="4"
         *ngFor="let elemento of elementos"
       >
-        <ion-card>
+        <ion-card
+        class="ion-border-radius"
+        >
           <ion-card-header>
             <ion-card-title>{{ elemento.title }}</ion-card-title>
           </ion-card-header>
